K8S/1_depl-platforms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depl-platforms-d
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice-d
  template:
    metadata:
      labels:
        app: platformservice-d
    spec:
      containers:
      - name: platformservice-d
        image: ahsansoftengineer/platformservice-d
        ports:
        - containerPort: 5401
---
apiVersion: v1
kind: Service
metadata:
  name: srvc-clusterip-platforms
spec:
  type: ClusterIP
  selector:
    app: platformservice-d
  ports:
  - name: platformservice-d
    protocol: TCP
    port: 5401
    targetPort: 5401
