K8S/depl-commands.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depl-commands
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandservice-d
  template:
    metadata:
      labels:
        app: commandservice-d
    spec:
      containers:
        - name: commandservice-d
          image: ahsansoftengineer/commandservice-d
          ports:
            - containerPort: 8081  # Replace with the actual port your container listens on
---
apiVersion: v1
kind: Service
metadata:
  name: srv-clusterip-commands
spec:
  type: ClusterIP
  selector:
    app: commandservice-d
  ports:
  - name: commandservice
    protocol: TCP
    port: 80
    targetPort: 80
